<resources>
    <string name="app_name">cOdin Quiz Application</string>
    <string name="username">Username</string>
    <string name="codinlogo">cOdinLogo</string>
    <string name="e_mail">E-mail</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="myProfile">My Profile</string>
    <string name="newAssignment">New Assignment</string>
    <string name="professor">Professor</string>
    <string name="name_surname">Name Surname</string>
    <string name="sw_shuffle">Shuffle questions and answers</string>
    <string name="sw_feedback">Question feedback</string>
    <string name="sw_result">Show test result</string>
    <string name="select_questions_title">Select questions</string>
    <string name="title_activity_student_main">StudentMain</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="generate_code">Generate access code</string>
    <string name="name">Test ID</string>
    <string name="available_for">Available for</string>
    <string name="test_options">Test Options</string>
    <string name="create_new_test">Create new test</string>
    <string name="existing_tests">Existing tests</string>
    <string name="create_a_new_question">Create a new question</string>
    <string name="existing_questions">Existing questions</string>
    <string name="assignment_history">Assignment history</string>
    <string name="feedback">Feedback</string>
    <string name="leave_feedback">Leave feedback</string>
    <string name="my_profile">My Profile</string>
    <string name="new_assignment">New assignment</string>
    <string name="title_activity_student_feedback">StudentFeedbackActivity</string>
    <string name="title_activity_teacher_generate_code">TeacherGenerateCode</string>
    <string name="title_activity_teacher_create_test">TeacherCreateTest</string>
    <string name="title_activity_teacher_test_options">TeacherTestOptions</string>
    <string name="title_activity_teacher_feedback">TeacherFeedbackActivity</string>
    <string name="title_activity_teacher_create_question">TeacherCreateQuestion</string>
    <string name="title_activity_teacher_existing_questions">TeacherExistingQuestions</string>
    <string name="title_activity_teacher_see_history">TeacherSeeHistory</string>
    <string name="title_activity_teacher_share_test">TeacherShareTest</string>
    <string name="title_activity_teacher_see_statistics">TeacherSeeStatistics</string>
    <string name="title_activity_teacher_existing_tests">Select one of the existing tests: </string>
    <string name="btnSelectTest">SELECT TEST</string>
    <string name="btnTakeTest">Take test</string>
    <string name="downloadStudents">Download List of Students</string>
    <string name="rateAppText">Rate the application</string>
    <string name="rate1">How easy it is to use the app?</string>
    <string name="rating2">Are you satisfied with the functionalities?</string>
    <string name="rating3">Do you consider that this app is useful?</string>
    <string name="sendRatings">Send Ratings</string>
    <string name="calendarText">See current school week</string>
    <string name="mailContact">Do you have further questions? Do not hesitate to contact us via email !</string>
    <string name="goToGmail">Go to Gmail</string>
    <string name="gmail">Gmail</string>
    <string name="student_name">Student Name</string>
    <string name="avatar_string">Avatar</string>
    <string name="assignment_history_string">Assignment History</string>
    <string name="select_category">Select Category</string>
    <string name="answer_1">Answer 1</string>
    <string name="answer_2">Answer 2</string>
    <string name="answer_4">Answer 4</string>
    <string name="answer_3">Answer 3</string>
    <string name="save_question">Save Question</string>
    <string name="first">First</string>
    <string name="last">Last</string>
    <string name="dash">Dash</string>
    <string name="google_maps">Find us on Google Maps</string>
    <string name="questionNo">Question No. </string>
    <string name="existingTestID">Test ID</string>
    <string name="existingTestName">Test name</string>
    <string name="existingTestQuestion">Question</string>
    <string name="existingTestAnswer">Answer</string>
    <string name="start">Start</string>
    <string name="textView_existingQuestions_Title">See Questions </string>
    <string name="buttonGenerateCode">Get code</string>
    <string name="buttonSave">Save Test</string>
    <string name="npLabel2">Select maximum time(min)</string>
    <string name="editTimeLimit">Int Number</string>
    <string name="textView_existingQuestions_SelectTest">Select test </string>
    <string name="enterTestCode">Enter test code</string>
    <string name="enterYourName">Enter your name</string>
    <string name="error_text">Error</string>
    <string name="contact_us">Contact us</string>
    <string name="test_statistics">Test Statistics</string>
    <string name="shareTest">Share Test</string>
    <string name="communicate">Communicate</string>
    <string name="share">Share</string>
    <string name="viewPieChart">View Pie Chart</string>
    <string name="viewHistogram">View Histogram</string>
    <string name="seeNumberOfPassingStudents">See number of passing students</string>
    <string name="allStudents">All students</string>
    <string name="pickStudent">Pick a student</string>
    <string name="addImage">Add an image</string>
    <string name="question">Question</string>
    <string name="createCategory">Create a new category</string>
    <string name="shareViaEmail">Share via Email with</string>
    <string name="enterEmail">Enter email</string>
    <string name="send">Send</string>
    <string name="getCode">Get code</string>
    <string name="saveTest">Save test</string>
    <string name="selectMaxTime">Select maximum time(min)</string>
    <string name="seeQuestions">See questions</string>
    <string name="selectTest">Select test</string>
<string name="switchLogin">Teacher?</string>
    <string name="takeTestCode">...or take test with a code</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_question_to_test">Add Question to Test</string>
    <string name="title_activity_maps">Map</string>
    <string name="helloworld">Text to be replaced</string>
    <string name="take_test">Take Test</string>
    <string name="swipe_right_or_left_to_see_questions"><![CDATA[Swipe Right or Left to see questions ->]]></string>
    <string name="submit_answer">Submit Answer</string>
    <string name="todo">TODO</string>
    <string name="textview2">TextView2</string>
    <string name="textview1">TextView1</string>
    <string name="textview3">TextView3</string>
    <string name="buttonSaveGrades">Save Data</string>
    <string name="codin_quiz_app">cOdin Quiz App</string>

</resources>
